--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="slogan">for your business.</div>
             </div>
             <div class="column-right">
-              <svg xmlns="http://www.w3.org/2000/svg" width="85.039px" height="85.039px" viewBox="0 0 85.039 85.039" class="arrow arrow--light">
+              <svg xmlns="http://www.w3.org/2000/svg" width="85.039px" height="85.039px" viewBox="0 0 85.039 85.039" class="arrow arrow--home">
                 <circle fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#7878F5" stroke-width="2.4418" stroke-miterlimit="22.9256" cx="42.52" cy="42.52" r="40.833"></circle>
                 <line fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#7878F5" stroke-width="2.4418" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="22.9256" x1="42.52" y1="58.196" x2="42.52" y2="26.843"></line>
                 <polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#7878F5" stroke-width="2.4418" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="22.9256" points="    58.196,42.52 42.52,26.843 26.843,42.52 	"></polyline>
