--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>into.domains | Homepage</title>
     <meta name="description" content="Domains are cool.">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600">
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   </head>
@@ -89,6 +89,6 @@
         </div>
       </section>
     </main>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
